missverständnisse: kleine änderungen

--- a/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
+++ b/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
@@ -167,7 +167,7 @@
 	}{Es gibt keinen intrinsischen Wert, sondern der Wert entsteht durch gesellschaftliche Zuschreibung und kollektive Akzeptanz\footnotemark}
 
 \misconceptionslide{Volatilität}{Bitcoin ist zu volatil, um als Währung oder Wertaufbewahrung zu funktionieren}{%
-        \item Volatilität nimmt langfristig ab
+        \item Volatilität nimmt langfristig ab, wenn auch weniger als gedacht
         \item Weniger volatil als 33 S\&P 500 Aktien
         \item Typisch für neue Asset-Klassen
         \item Institutionelle Adoption stabilisiert
@@ -191,6 +191,14 @@
         \item Lightning theoretisch 15x schneller als Visa - global, ohne Intermediäre
     }{Bitcoin übertrifft Visa bereits im Transaktionsvolumen und bei Second-Layer-Geschwindigkeit.}
 
+\misconceptionslide{Spekulationsblase}{Bitcoin ist eine Spekulationsblase}{%
+ 	\item Blasen sind kurzfristig, über Monate, nicht über 10 Jahre
+        \item Wertspeicher für langfristiges Sparen
+        \item Netzwerkeffekte schaffen Mehrwert
+        \item Institutionelle Adoption validiert Use-Case
+        \item Knappheit (21 Mio. Limit) ähnlich wie Gold
+    }{Fundamentaler Nutzen wächst über reine Spekulation hinaus.}
+
 \misconceptionslide{Schneeballsystem}{Bitcoin ist ein Schneeballsystem}{%
         \item Schneeballsysteme versprechen fixe Auszahlungen durch neue Teilnehmer
         \item Bitcoin gibt keine Renditegarantien
@@ -211,21 +219,16 @@
         \item Europol betrachtet vor allem Bargeld und das traditionelle Bankensystem als relevant für Geldwäsche
     }{Bitcoin ist schlechter für Kriminalität als traditionelle Methoden.}
 
-\misconceptionslide{Spekulationsblase}{Bitcoin ist eine Spekulationsblase ohne fundamentalen Wert}{%
-        \item Wertspeicher für langfristiges Sparen
-        \item Netzwerkeffekte schaffen Mehrwert
-        \item Institutionelle Adoption validiert Use-Case
-        \item Knappheit (21 Mio. Limit) ähnlich wie Gold
-    }{Fundamentaler Nutzen wächst über reine Spekulation hinaus.}
-
 \misconceptionslide{Praktische Adoption}{Bitcoin hat keine praktische Anwendung im Alltag}{%
-        \item Wachsende Händler-Akzeptanz
         \item Legales Zahlungsmittel (El Salvador, CAR)
         \item Corporate Treasury Asset
+        \item Bitcoin-besicherte Kredite
         \item Grenzüberschreitende Zahlungen
-    }{Praktische Anwendungen wachsen kontinuierlich.}
+        \item Langfristiges Sparen und Pensionsvorsorge
+    }{Praktische Anwendungen wachsen kontinuierlich. Tägliche Zahlungen sind weniger sinnvoll, da nach Greshams Gesetz\footnotemark\ das ``schlechtere Geld'' bevorzugt ausgegeben wird.}
+        \only<2->{\footnotetext{Wikipedia: Greshamsches Gesetz}}
 
-\misconceptionslide{Zentralbank-Bedenken}{Bitcoin bedroht die Geldpolitik und wird von Regierungen verboten}{%
+\misconceptionslide{Bedenken von Zentralbanken}{Bitcoin bedroht die Geldpolitik und wird von Regierungen verboten}{%
         \item Ergänzt traditionelle Finanzsysteme
         \item Regierungen entwickeln crypto-freundliche Gesetze
         \item Zentralbanken erforschen digitale Währungen
@@ -281,6 +284,7 @@
         \item \href{https://www.unodc.org/documents/data-and-analysis/Studies/Illicit_financial_flows_2011_web.pdf}{United Nations Office on Drugs and Crime: Illicit Financial Flows Study}
         \item Sopra Banking Software, 2024 (Specific publication not found online)
         \item \href{https://www.amazon.com/Blocksize-War-controls-Bitcoins-protocol/dp/B08YQMC2WM}{The Blocksize War: The battle over who controls Bitcoins protocol rules} - Jonathan Bier
+        \item \href{https://de.wikipedia.org/wiki/Greshamsches_Gesetz}{Wikipedia: Greshamsches Gesetz}
     \end{itemize}
 
     \vspace{1em}
