Missverständnisse: hervorheben einiger Wörter für Lesbarkeit

--- a/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
+++ b/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
@@ -187,11 +187,11 @@
 
 \misconceptionslide[pix/mining.jpg]{Umweltauswirkungen}{Bitcoin-Mining verbraucht zu viel Energie und zerstört die Umwelt}{%
         \item Energieverbrauch \textbf{essentiell}, nicht ``sinnlos''.
-        \item Nur 0,54\% des globalen Stromverbrauchs\footnotemark
-        \item Über 50\% erneuerbare Energiequellen\footnotemark
-        \item Überschussenergie aus alternativen Quellen (``Energy Consumer of Last Resort'')
-        \item Weniger umweltschädlich als Goldbergbau
-        \item 87\% der Mining-Hardware wird recycelt\footnotemark
+        \item Nur \textbf{0,54\%} des globalen Stromverbrauchs\footnotemark
+        \item Über \textbf{50\%} erneuerbare Energiequellen\footnotemark
+        \item \textbf{Überschussenergie} aus alternativen Quellen (``Energy Consumer of Last Resort'')
+        \item Weniger umweltschädlich als \textbf{Goldbergbau}
+        \item \textbf{87\%} der Mining-Hardware wird recycelt\footnotemark
         \only<2->{\footnotetext[1]{Cambridge Centre for Alternative Finance}}
         \only<2->{\footnotetext[2]{Cambridge Digital Mining Industry Report 2025}}
         \only<2->{\footnotetext[3]{z.B. 21 Energy}}
@@ -199,94 +199,94 @@
 
 \misconceptionslide[pix/nichts-intrinsisches.jpg]{Kein intrinsischer Wert}{Bitcoin hat keinen intrinsischen Wert, daher ist es wertlos}{%
         \item Bitcoin hat keine laufenden Erträge, daher nicht vergleichbar
-        \item Nutzen 1: Knappheit: limitiert auf 21 Mio
-        \item Nutzen 2: Zensurresistenz
-        \item Nutzen 3: Globales Zahlungsnetzwerk (Portabilität und Teilbarkeit)
+        \item Nutzen 1: \textbf{Knappheit}: limitiert auf \textbf{21 Mio}
+        \item Nutzen 2: \textbf{Zensurresistenz}
+        \item Nutzen 3: \textbf{Globales Zahlungsnetzwerk} (\textbf{Portabilität und Teilbarkeit})
         \only<2->{\footnotetext[1]{Emily Stanhope und der Ökonom Charles Brandt, in ``Review of Economic Philosophy''}}
 	}{Es gibt keinen intrinsischen Wert, sondern der Wert entsteht durch gesellschaftliche Zuschreibung und kollektive Akzeptanz\footnotemark}
 
 \misconceptionslide[pix/volatil.jpg]{Volatilität}{Bitcoin ist zu volatil, um als Währung oder Wertaufbewahrung zu funktionieren}{%
         \item Volatilität nimmt langfristig ab, wenn auch weniger als gedacht
-        \item Weniger volatil als 33 S\&P 500 Aktien
-        \item Typisch für neue Asset-Klassen (price discovery)
-        \item Institutionelle Adoption stabilisiert
-        \item Langfristiger Trend in der logarithmierten Preiskurve sichtbar: spätere ``Täler'' liegen höher als vorherige ``Gipfel''
+        \item \textbf{Weniger volatil} als \textbf{33 S\&P 500 Aktien}
+        \item Typisch für neue Asset-Klassen (\textbf{price discovery})
+        \item \textbf{Institutionelle Adoption} stabilisiert
+        \item Langfristiger Trend in der \textbf{logarithmierten Preiskurve} sichtbar: spätere ``Täler'' liegen höher als vorherige ``Gipfel''
     }{Reifung des Marktes führt zu weniger Volatilität.}
 
 \misconceptionslide[pix/verbrecher-2.jpg]{Regulierung}{Bitcoin hat keine rechtliche Grundlage und wird verboten werden}{%
-        \item Legitimierung: USA und EU schaffen klare Gesetze
-        \item Regulierung: betrifft die Intermediären (Börsen), nicht Bitcoin an sich
-        \item EU: MiCA-Verordnung erlaubt Bitcoin \& Co.
+        \item Legitimierung: \textbf{USA und EU} schaffen klare Gesetze
+        \item Regulierung: betrifft die \textbf{Intermediären} (Börsen), nicht Bitcoin an sich
+        \item EU: \textbf{MiCA-Verordnung} erlaubt Bitcoin \& Co.
         \item Institutionelle Compliance wächst
-        \item Verbote schwer durchsetzbar
+        \item Verbote \textbf{schwer durchsetzbar}
     }{Rechtliche Klarheit nimmt weltweit zu.}
 
 \misconceptionslide[pix/bitcoin-skalieren.jpg]{Skalierbarkeit}{Bitcoin kann nur 3-4 Transaktionen pro Sekunde verarbeiten}{%
-        \item Blockchain-Trilemma: Skalierbarkeit vs. Sicherheit vs. Dezentralisierung
-        \item Lightning Network: bis zu 1 Million TPS möglich
-        \item Visa: 65.000 TPS, 150 Mio. Transaktionen/Tag\footnotemark
-        \item Bitcoin Transaktionsvolumen: 20 Bio. \$ vs. Visa 13 Bio. \$\footnotemark
+        \item \textbf{Blockchain-Trilemma}: Skalierbarkeit vs. Sicherheit vs. Dezentralisierung
+        \item \textbf{Lightning Network}: bis zu \textbf{1 Million TPS} möglich
+        \item Visa: \textbf{65.000 TPS}, \textbf{150 Mio. Transaktionen/Tag}\footnotemark
+        \item Bitcoin Transaktionsvolumen: \textbf{20 Bio. \$} vs. Visa \textbf{13 Bio. \$}\footnotemark
 	\only<2->{\footnotetext[1]{Visa Inc. Annual Report 2023}}
 	\only<2->{\footnotetext[2]{Sygnum Bank Report, 2024}}
-        \item Lightning theoretisch 15x schneller als Visa - global, ohne Intermediäre
-        \item Haken: VISA ist kein finales Settlement wie Bitcoin
+        \item Lightning theoretisch \textbf{15x schneller} als Visa - global, ohne Intermediäre
+        \item Haken: VISA ist kein \textbf{finales Settlement} wie Bitcoin
     }{Bitcoin übertrifft Visa bereits im Transaktionsvolumen und bei Second-Layer-Geschwindigkeit.}
 
 \misconceptionslide[pix/blase.jpg]{Spekulationsblase}{Bitcoin ist eine Spekulationsblase}{%
- 	\item Blasen sind kurzfristig, über Monate, nicht über 10 Jahre
- 	\item Bitcoin hatte -- wenn überhaupt -- mehrere Blasen
+ 	\item Blasen sind kurzfristig, über Monate, nicht über \textbf{10 Jahre}
+ 	\item Bitcoin hatte -- wenn überhaupt -- \textbf{mehrere Blasen}
         \item Wertspeicher für langfristiges Sparen
-        \item Netzwerkeffekte schaffen Mehrwert
-        \item ``Lindy-Effekt'': Je länger eine Technologie überlebt, desto länger wird sie bestehen
+        \item \textbf{Netzwerkeffekte} schaffen Mehrwert
+        \item \textbf{``Lindy-Effekt''}: Je länger eine Technologie überlebt, desto länger wird sie bestehen
         \item Institutionelle Adoption validiert Use-Case
-        \item Knappheit (21 Mio. Limit) ähnlich wie Gold
+        \item \textbf{Knappheit} (\textbf{21 Mio. Limit}) ähnlich wie Gold
     }{Fundamentaler Nutzen wächst über reine Spekulation hinaus.}
 
 \misconceptionslide[pix/bitcoin-schneeball.jpg]{Schneeballsystem}{Bitcoin ist ein Schneeballsystem}{%
-        \item Schneeballsysteme versprechen fixe Auszahlungen durch neue Teilnehmer
-        \item Bitcoin gibt keine Renditegarantien
-        \item Keine zentrale Organisation oder strukturierte Vertriebsarchitektur
-        \item Weltbank 2022: Bitcoin-Protokoll offen zugänglich und nicht verpflichtend\footnotemark
-        \item Schweizer Finma stuft Bitcoin nicht als Schneeballsystem ein\footnotemark
+        \item Schneeballsysteme versprechen \textbf{fixe Auszahlungen} durch neue Teilnehmer
+        \item Bitcoin gibt \textbf{keine Renditegarantien}
+        \item \textbf{Keine zentrale Organisation} oder strukturierte Vertriebsarchitektur
+        \item \textbf{Weltbank} 2022: Bitcoin-Protokoll \textbf{offen zugänglich} und \textbf{nicht verpflichtend}\footnotemark
+        \item \textbf{Schweizer Finma} stuft Bitcoin nicht als Schneeballsystem ein\footnotemark
 \only<2->{\footnotetext[1]{World Bank Group, Distributed Ledger Technology and Digital Assets, 2022}}
 \only<2->{\footnotetext[2]{FINMA Guidance 02/2019: Payments on the blockchain}}
     }{Bitcoin erfüllt keines der zentralen Merkmale eines Schneeballsystems.}
 
 \misconceptionslide[pix/kriminalitaet.jpg]{Kriminalität}{Bitcoin wird hauptsächlich für illegale Aktivitäten verwendet}{%
-        \item Anteil illegaler Bitcoin-Transaktionen nur noch 0,34\%\footnotemark
-        \item Traditionell: 2\% - 5\% des globalen BIP fließen durch illegale Kanäle\footnotemark
+        \item Anteil illegaler Bitcoin-Transaktionen nur noch \textbf{0,34\%}\footnotemark
+        \item Traditionell: \textbf{2\% - 5\%} des globalen BIP fließen durch illegale Kanäle\footnotemark
 \only<2->{\footnotetext[1]{Chainalysis 2024}}
 \only<2->{\footnotetext[2]{United Nations Schätzung}}
-        \item Blockchain ist transparent und nachverfolgbar
-        \item Die unveränderliche, öffentliche Aufzeichnung aller Transaktionen ist ein Albtraum für Kriminelle
-        \item Europol betrachtet vor allem Bargeld und das traditionelle Bankensystem als relevant für Geldwäsche
+        \item Blockchain ist \textbf{transparent und nachverfolgbar}
+        \item Die \textbf{unveränderliche, öffentliche Aufzeichnung} aller Transaktionen ist ein Albtraum für Kriminelle
+        \item \textbf{Europol} betrachtet vor allem Bargeld und das traditionelle Bankensystem als relevant für Geldwäsche
     }{Bitcoin ist schlechter für Kriminalität als traditionelle Methoden.}
 
 \misconceptionslide[pix/no-bitcoin-in-shop.png]{Praktische Adoption}{Bitcoin hat keine praktische Anwendung im Alltag}{%
-        \item Legales Zahlungsmittel (El Salvador, CAR)
-        \item Corporate Treasury Asset
-        \item Bitcoin-besicherte Kredite
+        \item Legales Zahlungsmittel (\textbf{El Salvador, CAR})
+	\item Langfristiges \textbf{Sparen und Pensionsvorsorge}
         \item Grenzüberschreitende Zahlungen
-        \item Schutz vor Inflation
-        \item Werkzeug für finanzielle Inklusion
-        \item Langfristiges Sparen und Pensionsvorsorge
+        \item \textbf{Bitcoin-besicherte Kredite}
+        \item \textbf{Corporate Treasury Asset}
+        \item \textbf{Schutz vor Inflation}
+        \item Werkzeug für \textbf{finanzielle Inklusion}
     }{Praktische Anwendungen wachsen kontinuierlich. Tägliche Zahlungen sind weniger sinnvoll, da nach Greshams Gesetz\footnotemark\ das ``schlechtere Geld'' bevorzugt ausgegeben wird.}
         \only<2->{\footnotetext{Wikipedia: Greshamsches Gesetz}}
 
 \misconceptionslide[pix/zentralbank.jpg]{Bedenken von Zentralbanken}{Bitcoin bedroht die Geldpolitik und wird von Regierungen verboten}{%
         \item Ergänzt traditionelle Finanzsysteme
-        \item Bitcoin ist ein neutrales Reserve-Asset (ähnlich Gold)
+        \item Bitcoin ist ein \textbf{neutrales Reserve-Asset} (ähnlich Gold)
         \item Zentralbanken erforschen digitale Währungen
-        \item Banken vergeben Bitcoin-backed Loans: ``Bitcoin-Kreditvergabe ist eine logische Erweiterung des Krypto-Dienstleistungsportfolios der Banken''\footnotemark
+        \item Banken vergeben \textbf{Bitcoin-backed Loans}: ``Bitcoin-Kreditvergabe ist eine logische Erweiterung des Krypto-Dienstleistungsportfolios der Banken''\footnotemark
 \only<2->{\footnotetext[1]{Sopra Banking Software, 2024}}
-        \item Hedge gegen Geldpolitik-Versagen
+        \item \textbf{Hedge} gegen Geldpolitik-Versagen
     }{Koexistenz statt Konkurrenzkampf mit traditioneller Finanzwelt.}
 
 \misconceptionslide[pix/hacking-2.jpg]{Technische Sicherheit}{Bitcoin kann gehackt werden}{%
-        \item 99,98\% Uptime seit 2009
-        \item Dezentralisierung verhindert Single Point of Failure
-        \item Protokoll wird durch zehntausende Nodes robust abgesichert
-        \item Berühmte ``51\%-Attacken'' sind ökonomisch irrational
+        \item \textbf{99,98\% Uptime} seit \textbf{2009}
+        \item \textbf{Dezentralisierung} verhindert Single Point of Failure
+        \item Protokoll wird durch \textbf{zehntausende Nodes} robust abgesichert
+        \item Berühmte \textbf{``51\%-Attacken''} sind \textbf{ökonomisch irrational}
         \item Kritische Netzwerk-Updates erfordern breiten Konsens\footnotemark
 \only<2->{\footnotetext[1]{The Blocksize War: The battle over who controls Bitcoin's protocol rules, Jonathan Bier}}
     }{Bitcoin ist seit über 15 Jahren ohne erfolgreichen Hack im Betrieb.}
