Missverständnisse: microtype package, kleine Tweaks

--- a/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
+++ b/slides/2025-missverstaendnisse/2025-missverstaendnisse.tex
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{booktabs}
+\usepackage[protrusion=true,expansion=false]{microtype}
 
 % Bitcoin orange color theme
 \definecolor{bitcoinorange}{RGB}{247,147,26}
@@ -223,13 +224,13 @@
 
 \misconceptionslide[pix/bitcoin-skalieren.jpg]{Skalierbarkeit}{Bitcoin kann nur 3-4 Transaktionen pro Sekunde verarbeiten}{%
         \item \textbf{Blockchain-Trilemma}: Skalierbarkeit vs. Sicherheit vs. Dezentralisierung
-        \item \textbf{Lightning Network}: bis zu \textbf{1 Million TPS} möglich
-        \item Visa: \textbf{65.000 TPS}, \textbf{150 Mio. Transaktionen/Tag}\footnotemark
-        \item Bitcoin Transaktionsvolumen: \textbf{20 Bio. \$} vs. Visa \textbf{13 Bio. \$}\footnotemark
+        \item \textbf{Lightning Network}: bis zu \textbf{1 Million TPS}
+        \item Visa: \textbf{65.000 TPS}, \textbf{150 Mio. TX/Tag}\footnotemark
+        \item Volumen: Bitcoin \textbf{\$20 Bio.} vs. Visa \textbf{\$13 Bio.}\footnotemark
 	\only<2->{\footnotetext[1]{Visa Inc. Annual Report 2023}}
 	\only<2->{\footnotetext[2]{Sygnum Bank Report, 2024}}
-        \item Lightning theoretisch \textbf{15x schneller} als Visa - global, ohne Intermediäre
-        \item Haken: VISA ist kein \textbf{finales Settlement} wie Bitcoin
+        \item Lightning theoretisch \textbf{15x schneller} als Visa - global, dezentral
+        \item VISA ist kein \textbf{finales Settlement} wie Bitcoin
     }{Bitcoin übertrifft Visa bereits im Transaktionsvolumen und bei Second-Layer-Geschwindigkeit.}
 
 \misconceptionslide[pix/blase.jpg]{Spekulationsblase}{Bitcoin ist eine Spekulationsblase}{%
@@ -307,10 +308,10 @@
     \vspace{0.5em}
     \begin{block}{Empfehlungen}
         \begin{itemize}
-            \item \textbf{Informieren Sie sich aus seriösen und aktuellen Quellen!}
             \item Hinterfragen Sie emotionale Argumente und suchen Sie nach Fakten
+            \item Informieren Sie sich aus \textbf{seriösen und aktuellen Quellen!}
             \item Verstehen Sie den Unterschied zwischen Bitcoin-Protokoll und Exchanges
-            \item Berücksichtigen Sie die schnelle Entwicklung des Ökosystems
+	    \item Außerdem ist \textbf{Bitcoin nicht ``Krypto''}
         \end{itemize}
     \end{block}
 \end{frame}
@@ -321,14 +322,14 @@
         \item \href{https://www.jbs.cam.ac.uk/faculty-research/centres/alternative-finance/}{Cambridge Centre for Alternative Finance}
         \item \href{https://www.jbs.cam.ac.uk/wp-content/uploads/2025/04/2025-04-cambridge-digital-mining-industry-report.pdf}{Cambridge Digital Mining Industry Report 2025}
         \item \href{https://21energy.com/}{21 Energy}
-        \item Emily Stanhope und der Ökonom Charles Brandt, in ``Review of Economic Philosophy'' (Academic citation - URL not publicly available)
+        \item Emily Stanhope und der Ökonom Charles Brandt, in ``Review of Economic Philosophy''
         \item \href{https://s29.q4cdn.com/385744025/files/doc_downloads/2023/Visa-Inc-Fiscal-2023-Annual-Report.pdf}{Visa Inc. Annual Report 2023}
         \item \href{https://www.sygnum.com/wp-content/uploads/2024/11/Sygnum-Future-Finance-Report-2024-institutional-crypto-market_download.pdf}{Sygnum Bank Future Finance Report 2024}
-        \item World Bank Group, Distributed Ledger Technology and Digital Assets, 2022 (Specific document not found online)
+        \item World Bank Group, Distributed Ledger Technology and Digital Assets, 2022
         \item \href{https://www.finma.ch/~/media/finma/dokumente/dokumentencenter/myfinma/4dokumentation/finma-aufsichtsmitteilungen/20190826-finma-aufsichtsmitteilung-02-2019.pdf?sc_lang=en}{FINMA Guidance 02/2019: Payments on the blockchain}
         \item \href{https://go.chainalysis.com/crypto-crime-2024.html}{Chainalysis 2024 Crypto Crime Report}
         \item \href{https://www.unodc.org/documents/data-and-analysis/Studies/Illicit_financial_flows_2011_web.pdf}{United Nations Office on Drugs and Crime: Illicit Financial Flows Study}
-        \item Sopra Banking Software, 2024 (Specific publication not found online)
+        \item Sopra Banking Software, 2024
         \item \href{https://www.amazon.com/Blocksize-War-controls-Bitcoins-protocol/dp/B08YQMC2WM}{The Blocksize War: The battle over who controls Bitcoins protocol rules} - Jonathan Bier
         \item \href{https://de.wikipedia.org/wiki/Greshamsches_Gesetz}{Wikipedia: Greshamsches Gesetz}
     \end{itemize}
